--- a/views/views.xml
+++ b/views/views.xml
@@ -1,60 +1,15 @@
 <odoo>
   <data>
-    <!-- explicit list view definition -->
-    <!--
-    <record model="ir.ui.view" id="th_invoice_partner_bank_id.list">
-      <field name="name">th_invoice_partner_bank_id list</field>
-      <field name="model">th_invoice_partner_bank_id.th_invoice_partner_bank_id</field>
+    <!-- invoice inherit form view -->
+    <record model="ir.ui.view" id="th_inherit_invoice_partner_bank_id">
+      <field name="name">th_inherit_invoice_partner_bank_id</field>
+      <field name="model">account.invoice</field>
+      <field name="inherit_id" ref="account.invoice_form"/>
       <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
+        <field name="partner_bank_id" position="attributes">
+          <attribute name="invisible">0</attribute>
+        </field>
       </field>
     </record>
-    -->
-
-    <!-- actions opening views on models -->
-    <!--
-    <record model="ir.actions.act_window" id="th_invoice_partner_bank_id.action_window">
-      <field name="name">th_invoice_partner_bank_id window</field>
-      <field name="res_model">th_invoice_partner_bank_id.th_invoice_partner_bank_id</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-    -->
-
-    <!-- server action to the one above -->
-    <!--
-    <record model="ir.actions.server" id="th_invoice_partner_bank_id.action_server">
-      <field name="name">th_invoice_partner_bank_id server</field>
-      <field name="model_id" ref="model_th_invoice_partner_bank_id_th_invoice_partner_bank_id"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": self._name,
-        }
-      </field>
-    </record>
-    -->
-
-    <!-- Top menu item -->
-    <!--
-    <menuitem name="th_invoice_partner_bank_id" id="th_invoice_partner_bank_id.menu_root"/>
-    -->
-    <!-- menu categories -->
-    <!--
-    <menuitem name="Menu 1" id="th_invoice_partner_bank_id.menu_1" parent="th_invoice_partner_bank_id.menu_root"/>
-    <menuitem name="Menu 2" id="th_invoice_partner_bank_id.menu_2" parent="th_invoice_partner_bank_id.menu_root"/>
-    -->
-    <!-- actions -->
-    <!--
-    <menuitem name="List" id="th_invoice_partner_bank_id.menu_1_list" parent="th_invoice_partner_bank_id.menu_1"
-              action="th_invoice_partner_bank_id.action_window"/>
-    <menuitem name="Server to list" id="th_invoice_partner_bank_id" parent="th_invoice_partner_bank_id.menu_2"
-              action="th_invoice_partner_bank_id.action_server"/>
-    -->
   </data>
 </odoo>
